--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<h1>Duvindu Thathsara</h1>
-<h1>GDSE66</h1>
-<h1>duvinduthathsara.42web.io</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="icon" href="check-mark.png">
+</head>
+<body>
+    
+</body>
+</html>
