--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <meta charset="UTF-8"
     <link rel="icon" href="check-mark.png">
+    <meta name="keywords" content="IJSE, GDSE, HTML, ABDS">
+    <meta name="description" content="Welcome to my personal Portfolio">
+    <meta name="owner" content="Duvindu Thathsara">
+    <meta name="author" content="Duvindu Thathsara">
+    <meta name="theme-color" content="red">
 </head>
 <body>
     
