--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>My Portfolio</title>
+    <base href="">
     <meta charset="UTF-8"
     <link rel="icon" href="check-mark.png">
     <meta name="keywords" content="IJSE, GDSE, HTML, ABDS">
@@ -14,6 +15,8 @@
     <meta name="theme-color" content="red">
 </head>
 <body>
+
+    <h1>Duvindu bn</h1>
     
 </body>
 </html>
