--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>My Portfolio</title>
     <base href="">
-    <meta charset="UTF-8"
     <link rel="icon" href="check-mark.png">
     <meta name="keywords" content="IJSE, GDSE, HTML, ABDS">
     <meta name="description" content="Welcome to my personal Portfolio">
     <meta name="owner" content="Duvindu Thathsara">
     <meta name="author" content="Duvindu Thathsara">
     <meta name="theme-color" content="red">
+    <meta name="robots" content="noindex,nofollow">
 </head>
 <body>
 
