Added Text Content

--- a/index.html
+++ b/index.html
@@ -26,16 +26,31 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
         <main>
             <hgroup>
-                <h1></h1>
-                <h4></h4>
+                <h1>DUVINDU THATHSARA</h1>
+                <h4>Full Stack Developer</h4>
             </hgroup>
-            <article></article>
+            <article>
+                <p>
+                    Join me on this virtual journey
+                    where I share my passion for crafting elegant code and unleashing the power of technology
+                    to shape the world around us.
+                </p>
+            </article>
             <nav></nav>
         </main>
     </Section>
@@ -56,13 +71,20 @@
 
         <main>
             <hgroup>
-                <h1></h1>
-                <h4></h4>
+                <h1>DUVINDU THATHSARA</h1>
+                <h4>Full Stack Develpoer</h4>
             </hgroup>
-            <article></article>
+            <article>
+                <p>
+                    My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I’m very passionate and
+                    dedicated to my work. With a strong commitment to excellence, I have acquired extensive knowledge to
+                    compete in the thriving software engineering industry. When it comes to my work, I approach each
+                    project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
+                </p>
+            </article>
             <nav></nav>
         </main>
-        
+
     </section>
 
 
@@ -78,10 +100,28 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <h4>My Skills</h4>
+
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+        </main>
 
         <footer></footer>
-        
+
     </section>
 
     <!-- My projects -->
@@ -96,7 +136,25 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <h4>My Projects</h4>
+
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+        </main>
 
         <footer></footer>
 
@@ -114,7 +172,25 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <h4>My Assignments</h4>
+
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+        </main>
 
         <footer></footer>
 
@@ -132,7 +208,25 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <h4>My Educational Qualifications</h4>
+
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                    architecto fugiat autem illo esse eum?</p>
+            </div>
+        </main>
 
         <footer></footer>
 
@@ -150,7 +244,9 @@
             </section>
         </header>
 
-        <main></main>
+        <main>
+            <h4>Get In Touch</h4>
+        </main>
 
         <footer></footer>
     </section>
