--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <nav></nav>
             </section>
             <section>
+                <div></div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -65,7 +66,17 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
@@ -76,7 +87,7 @@
             </hgroup>
             <article>
                 <p>
-                    My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I’m very passionate and
+                    My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I'm very passionate and
                     dedicated to my work. With a strong commitment to excellence, I have acquired extensive knowledge to
                     compete in the thriving software engineering industry. When it comes to my work, I approach each
                     project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
@@ -96,28 +107,59 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
         <main>
             <h4>My Skills</h4>
 
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
+            <!-- icons java/sql... -->
+            <section>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+
+            <!-- 3 big rectangles/services -->
+            <section>
+                <div>
+                    <div></div>
+                    <h3>Desktop Application Development</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </div>
+                <div>
+                    <div></div>
+                    <h3>Desktop Application Development</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </div>
+                <div>
+                    <div></div>
+                    <h3>Desktop Application Development</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
@@ -132,28 +174,49 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
         <main>
             <h4>My Projects</h4>
 
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
+            <section>
+                <div>
+                    <h4></h4>
+                    <article>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                            architecto fugiat autem illo esse eum?</p>
+                    </article>
+                </div>
+                <div>
+                    <h4></h4>
+                    <article>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                            architecto fugiat autem illo esse eum?</p>
+                    </article>
+                </div>
+                <div>
+                    <h4></h4>
+                    <article>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                            architecto fugiat autem illo esse eum?</p>
+                    </article>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
@@ -168,7 +231,17 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
@@ -176,19 +249,28 @@
             <h4>My Assignments</h4>
 
             <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
+                <h4></h4>
+                <article>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </article>
             </div>
             <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
+                <h4></h4>
+                <article>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </article>
             </div>
             <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
+                <h4></h4>
+                <article>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
+                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
+                        architecto fugiat autem illo esse eum?</p>
+                </article>
             </div>
         </main>
 
@@ -204,28 +286,40 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
         <main>
             <h4>My Educational Qualifications</h4>
 
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
-            <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                    dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                    architecto fugiat autem illo esse eum?</p>
-            </div>
+            <section>
+                <div>
+                    <h3></h3>
+                    <h5></h5>
+                    <div></div>
+                </div>
+                <div>
+                    <h3></h3>
+                    <h5></h5>
+                    <div></div>
+                </div>
+                <div>
+                    <h3></h3>
+                    <h5></h5>
+                    <div></div>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
@@ -240,7 +334,17 @@
                 <nav></nav>
             </section>
             <section>
-                <nav></nav>
+                <div></div>
+                <nav>
+                    <menu>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Skills</li>
+                        <li>My Works</li>
+                        <li>Education</li>
+                        <li>Contact</li>
+                    </menu>
+                </nav>
             </section>
         </header>
 
