inline text semantics

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <main>
             <hgroup>
-                <h1>DUVINDU THATHSARA</h1>
+                <h1><span>DUVINDU</span> THATHSARA</h1>
                 <h4>Full Stack Developer</h4>
             </hgroup>
             <article>
@@ -52,7 +52,9 @@
                     to shape the world around us.
                 </p>
             </article>
-            <nav></nav>
+            <nav>
+                
+            </nav>
         </main>
     </Section>
 
@@ -82,7 +84,7 @@
 
         <main>
             <hgroup>
-                <h1>DUVINDU THATHSARA</h1>
+                <h2><span>DUVINDU</span> THATHSARA</h2>
                 <h4>Full Stack Develpoer</h4>
             </hgroup>
             <article>
@@ -93,7 +95,11 @@
                     project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
                 </p>
             </article>
-            <nav></nav>
+            <nav>
+                <a href="assets/cv.txt" download="cv">
+                    <p>download cv</p>
+                </a>
+            </nav>
         </main>
 
     </section>
@@ -122,7 +128,7 @@
         </header>
 
         <main>
-            <h4>My Skills</h4>
+            <h4>My <span>Skills</span></h4>
 
             <!-- icons java/sql... -->
             <section>
@@ -141,23 +147,17 @@
                 <div>
                     <div></div>
                     <h3>Desktop Application Development</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <p>With a mastery of desktop application development, From concept to completion, I deliver exceptional applications that elevate user experiences and drive business growth.</p>
                 </div>
                 <div>
                     <div></div>
-                    <h3>Desktop Application Development</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <h3>Web Application Development</h3>
+                    <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce platforms to custom web solutions, I deliver innovative applications that engage users and drive business success.</p>
                 </div>
                 <div>
                     <div></div>
-                    <h3>Desktop Application Development</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <h3>Graphic Designing</h3>
+                    <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From brand identities to visual narratives, my innovative designs amplify brand presence and engage audiences with style.</p>
                 </div>
             </section>
         </main>
@@ -189,31 +189,25 @@
         </header>
 
         <main>
-            <h4>My Projects</h4>
+            <h4>My <span>Projects</span></h4>
 
             <section>
                 <div>
-                    <h4></h4>
+                    <h4>Project Smart Inventory</h4>
                     <article>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                            architecto fugiat autem illo esse eum?</p>
+                        <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize purchasing, and improve inventory turnover for efficient business operations.</p>
                     </article>
                 </div>
                 <div>
-                    <h4></h4>
+                    <h4>Project Data Analyzer</h4>
                     <article>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                            architecto fugiat autem illo esse eum?</p>
+                        <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics and intuitive visualizations to make data-driven decisions and uncover trends and opportunities</p>
                     </article>
                 </div>
                 <div>
-                    <h4></h4>
+                    <h4>Project Event Planner</h4>
                     <article>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                            dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                            architecto fugiat autem illo esse eum?</p>
+                        <p>Simplify event planning with EventPlanner. From guest management to budget tracking, effortlessly organize and execute successful events with this versatile software.</p>
                     </article>
                 </div>
             </section>
@@ -246,30 +240,24 @@
         </header>
 
         <main>
-            <h4>My Assignments</h4>
+            <h4>My <span>Assignments</span></h4>
 
             <div>
-                <h4></h4>
+                <h4>E-commerce Website Front-end Development</h4>
                 <article>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <p>Develop the front-end of an e-commerce website using HTML, CSS, and JavaScript</p>
                 </article>
             </div>
             <div>
-                <h4></h4>
+                <h4>Bug Fixing and Testing</h4>
                 <article>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <p>Identify and fix bugs in a software application through thorough testing and effective solutions</p>
                 </article>
             </div>
             <div>
-                <h4></h4>
+                <h4>Software Documentation and Technical Writing</h4>
                 <article>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore omnis porro quos, nihil
-                        dignissimos explicabo temporibus dolorem voluptate harum aperiam culpa laudantium vitae ad
-                        architecto fugiat autem illo esse eum?</p>
+                    <p>Create comprehensive software documentation, including user manuals and technical guides, with strong writing skills and attention to detail</p>
                 </article>
             </div>
         </main>
@@ -301,23 +289,28 @@
         </header>
 
         <main>
-            <h4>My Educational Qualifications</h4>
+            <h4>My <span>Educational Qualifications</span></h4>
 
             <section>
                 <div>
-                    <h3></h3>
-                    <h5></h5>
-                    <div></div>
+                    <hgroup>
+                        <h5>G.C.E Ordinary  Level Examination (2017)</h5>
+                        <h6>G/Mahinda College</h6>
+                    </hgroup>
                 </div>
                 <div>
-                    <h3></h3>
-                    <h5></h5>
-                    <div></div>
+                    <hgroup>
+                        <h5>G.C.E Advanced  Level Examination (2020)</h5>
+                        <h6>G/Mahinda College</h6>
+                    </hgroup>
                 </div>
                 <div>
-                    <h3></h3>
-                    <h5></h5>
-                    <div></div>
+                    <hgroup>
+                        <h5>Graduate Diploma 
+                            in Software Engineering</h5>
+                        <h6>Institute of Java Software
+                            Engineering (2022-2024)</h6>
+                    </hgroup>
                 </div>
             </section>
         </main>
@@ -349,10 +342,54 @@
         </header>
 
         <main>
-            <h4>Get In Touch</h4>
+            <h4>Get In <span>Touch</span></h4>
+
+            <address>
+                <div>
+                    <p>Galle, Sri Lanka</p>
+                </div>
+                <div>
+                    <p>+94 71 313 9962</p>
+                </div>
+                <div>
+                    <p>duvinduthathsara@gmail.com</p>
+                </div>
+                <div>
+                    <p>Duvindu Thathsara</p>
+                </div>
+            </address>
+            <aside>
+                <div></div>
+                <div></div>
+                <div></div>
+                <a href="email: duvinduthathsara@gmail.com">
+                    <p>Submit Message</p>
+                </a>
+            </aside>
+
+            <section>
+                <p><strong>Do you need me for your works?
+                        <a href="https://www.fiverr.com/?source=top_nav" target="_blank">
+                            <u>contact me for freelancing</u>
+                        </a>
+                    </strong>
+                </p>
+            </section>
+            <section>
+                <p>Find Me On: </p>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <small>Designed and developed by Duvindu Thathsara<br>
+                Copyright © 2023 - Duvindu Thathsara All Rights Reserved</small>
+        </footer>
     </section>
 
     <!--  -->
