added images and multimedia

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -68,7 +70,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -83,23 +87,28 @@
         </header>
 
         <main>
-            <hgroup>
-                <h2><span>DUVINDU</span> THATHSARA</h2>
-                <h4>Full Stack Develpoer</h4>
-            </hgroup>
-            <article>
-                <p>
-                    My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I'm very passionate and
-                    dedicated to my work. With a strong commitment to excellence, I have acquired extensive knowledge to
-                    compete in the thriving software engineering industry. When it comes to my work, I approach each
-                    project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
-                </p>
-            </article>
-            <nav>
-                <a href="assets/cv.txt" download="cv">
-                    <p>download cv</p>
-                </a>
-            </nav>
+            <aside>
+                <img src="assets/resources/images/my_photo.png" alt="">
+            </aside>
+            <section>
+                <hgroup>
+                    <h2><span>DUVINDU</span> THATHSARA</h2>
+                    <h4>Full Stack Develpoer</h4>
+                </hgroup>
+                <article>
+                    <p>
+                        My name is Duvindu Thathsara. I am a Full Stack Developer from Sri Lanka. I'm very passionate and
+                        dedicated to my work. With a strong commitment to excellence, I have acquired extensive knowledge to
+                        compete in the thriving software engineering industry. When it comes to my work, I approach each
+                        project with a unique blend of creativity,analytical thinking, and unwavering attention to detail.
+                    </p>
+                </article>
+                <nav>
+                    <a href="assets/cv.txt" download="cv">
+                        <p>download cv</p>
+                    </a>
+                </nav>
+            </section>
         </main>
 
     </section>
@@ -113,7 +122,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -132,30 +143,52 @@
 
             <!-- icons java/sql... -->
             <section>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/java.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/mysql.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/mongodb.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/js.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/html.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/css.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/figma.jpg" alt="" width="50">
+                </div>
+                <div>
+                    <img src="assets/resources/images/ps.jpg" alt="" width="50">
+                </div>
             </section>
 
             <!-- 3 big rectangles/services -->
             <section>
                 <div>
-                    <div></div>
+                    <div>
+                        <img src="assets/resources/images/computer (1).png" alt="computer icon" width="50">
+                    </div>
                     <h3>Desktop Application Development</h3>
                     <p>With a mastery of desktop application development, From concept to completion, I deliver exceptional applications that elevate user experiences and drive business growth.</p>
                 </div>
                 <div>
-                    <div></div>
+                    <div>
+                        <img src="assets/resources/images/network.png" alt="network icon" width="50">
+                    </div>
                     <h3>Web Application Development</h3>
                     <p>I create visually stunning, user-friendly, and seamless online experiences. From e-commerce platforms to custom web solutions, I deliver innovative applications that engage users and drive business success.</p>
                 </div>
                 <div>
-                    <div></div>
+                    <div>
+                        <img src="assets/resources/images/pen.png" alt="pen icon" width="50">
+                    </div>
                     <h3>Graphic Designing</h3>
                     <p>As a master of graphic design, I create captivating visuals that leave a lasting impact. From brand identities to visual narratives, my innovative designs amplify brand presence and engage audiences with style.</p>
                 </div>
@@ -174,7 +207,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -193,18 +228,21 @@
 
             <section>
                 <div>
+                    <img src="assets/resources/images/octavian-dan-b21Ty33CqVs-unsplash.jpg" alt="project 1 image" width="300">
                     <h4>Project Smart Inventory</h4>
                     <article>
                         <p>Streamline inventory management with SmartInventory. Easily track stock levels, optimize purchasing, and improve inventory turnover for efficient business operations.</p>
                     </article>
                 </div>
                 <div>
+                    <img src="assets/resources/images/featured-image.jpg" alt="project 2 image" width="300">
                     <h4>Project Data Analyzer</h4>
                     <article>
                         <p>Unlock valuable insights from your data with DataAnalyzer. Leverage advanced analytics and intuitive visualizations to make data-driven decisions and uncover trends and opportunities</p>
                     </article>
                 </div>
                 <div>
+                    <img src="assets/resources/images/project.png" alt="project 3 image" width="300">
                     <h4>Project Event Planner</h4>
                     <article>
                         <p>Simplify event planning with EventPlanner. From guest management to budget tracking, effortlessly organize and execute successful events with this versatile software.</p>
@@ -225,7 +263,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -243,18 +283,21 @@
             <h4>My <span>Assignments</span></h4>
 
             <div>
+                <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
                 <h4>E-commerce Website Front-end Development</h4>
                 <article>
                     <p>Develop the front-end of an e-commerce website using HTML, CSS, and JavaScript</p>
                 </article>
             </div>
             <div>
+                <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
                 <h4>Bug Fixing and Testing</h4>
                 <article>
                     <p>Identify and fix bugs in a software application through thorough testing and effective solutions</p>
                 </article>
             </div>
             <div>
+                <img src="assets/resources/images/8151789_orig.png" alt="assignment 1 image" width="300">
                 <h4>Software Documentation and Technical Writing</h4>
                 <article>
                     <p>Create comprehensive software documentation, including user manuals and technical guides, with strong writing skills and attention to detail</p>
@@ -274,7 +317,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -293,24 +338,36 @@
 
             <section>
                 <div>
+                    <img src="assets/resources/images/homework-gb544ddc8f_640.jpg" alt="image" width="300">
                     <hgroup>
                         <h5>G.C.E Ordinary  Level Examination (2017)</h5>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
+                    <div>
+                        <img src="assets/resources/images/MahindaCollegeLogo.jpeg" alt="image" width="50">
+                    </div>
                 </div>
                 <div>
+                    <img src="assets/resources/images/math-g89f39f0c4_640.jpg" alt="image" width="300">
                     <hgroup>
                         <h5>G.C.E Advanced  Level Examination (2020)</h5>
                         <h6>G/Mahinda College</h6>
                     </hgroup>
+                    <div>
+                        <img src="assets/resources/images/MahindaCollegeLogo.jpeg" alt="image" width="50">
+                    </div>
                 </div>
                 <div>
+                    <img src="assets/resources/images/a-book-g139e543d7_640.jpg" alt="image" width="300">
                     <hgroup>
                         <h5>Graduate Diploma 
                             in Software Engineering</h5>
                         <h6>Institute of Java Software
                             Engineering (2022-2024)</h6>
                     </hgroup>
+                    <div>
+                        <img src="assets/resources/images/326351595_686971346552200_5455708532631235658_n-removebg-preview.png" alt="image" width="50">
+                    </div>
                 </div>
             </section>
         </main>
@@ -327,7 +384,9 @@
                 <nav></nav>
             </section>
             <section>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/logo (1).png" alt="personal logo" style="background-color: black;" width="200">
+                </div>
                 <nav>
                     <menu>
                         <li>Home</li>
@@ -346,15 +405,19 @@
 
             <address>
                 <div>
+                    <img src="assets/resources/images/pin.png" alt="image" width="30">
                     <p>Galle, Sri Lanka</p>
                 </div>
                 <div>
+                    <img src="assets/resources/images/phone.png" alt="image" width="30">
                     <p>+94 71 313 9962</p>
                 </div>
                 <div>
+                    <img src="assets/resources/images/email.png" alt="image" width="30">
                     <p>duvinduthathsara@gmail.com</p>
                 </div>
                 <div>
+                    <img src="assets/resources/images/facebook.png" alt="image" width="30">
                     <p>Duvindu Thathsara</p>
                 </div>
             </address>
@@ -377,12 +440,24 @@
             </section>
             <section>
                 <p>Find Me On: </p>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <img src="assets/resources/images/facebook (1).png" alt="image" width="30">
+                </div>
+                <div>
+                    <img src="assets/resources/images/instagram.png" alt="image" width="30">
+                </div>
+                <div>
+                    <img src="assets/resources/images/twitter.png" alt="image" width="30">
+                </div>
+                <div>
+                    <img src="assets/resources/images/linkedin.png" alt="image" width="30">
+                </div>
+                <div>
+                    <img src="assets/resources/images/social.png" alt="image" width="30">
+                </div>
+                <div>
+                    <img src="assets/resources/images/github.png" alt="image" width="30">
+                </div>
             </section>
         </main>
 
